--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 
 
             <h4 id="github-account">GitHub Account</h4>
-<p>You will need for today’s workshop is a personal GitHub account. If you don’t already have one, you can sign up for free <a href="https://github.com/join">here</a>.</p>
+<p>You will need a personal GitHub account for today’s workshop. If you don’t already have one, you can sign up for free <a href="https://github.com/join">here</a>.</p>
 
 <h4 id="ssh-client">SSH Client</h4>
 <p>You will also need a client to SSH into a jumphost for command line access. Linux and Mac systems tend to have one included, and one of the most popular clients for Windows is PuTTY that you can download <a href="https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html">here</a>.</p>
