--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ ImageStream and Builds: <a href="https://cloudowski.com/articles/why-managing-co
 
             <h3 id="access-your-azure-red-hat-openshift-cluster">Access your Azure Red Hat OpenShift Cluster</h3>
 
-<p>We’ll start by getting into our individual clusters.</p>
+<p>We'll start by getting into our cluster.</p>
 
 <h2 id="connect-to-the-cluster">Connect to the cluster</h2>
 
