--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@ ImageStream and Builds: <a href="https://cloudowski.com/articles/why-managing-co
             <p>The <code class="language-plaintext highlighter-rouge">rating-web</code> is a NodeJS application that connects to the <code class="language-plaintext highlighter-rouge">rating-api</code>. Below are some of the details that you’ll need to deploy this.</p>
 
 <ul>
-  <li><code class="language-plaintext highlighter-rouge">rating-web</code> on GitHub: <a href="https://github.com/microsoft/rating-web">https://github.com/microsoft/rating-web</a></li>
+  <li><code class="language-plaintext highlighter-rouge">rating-web</code> on GitHub: <a href="https://github.com/adriangigante/rating-web">https://github.com/adriangigante/rating-web</a></li>
   <li>The container exposes port 8080</li>
   <li>The web app connects to the API over the internal cluster DNS, using a proxy through an environment variable named <code class="language-plaintext highlighter-rouge">API</code></li>
 </ul>
@@ -986,7 +986,7 @@ ImageStream and Builds: <a href="https://cloudowski.com/articles/why-managing-co
 
 <p>To be able to setup CI/CD webhooks, you’ll need to fork the application into your personal GitHub repository.</p>
 
-<p><a class="github-button" href="https://github.com/microsoft/rating-web/fork" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork microsoft/rating-web on GitHub">Fork</a></p>
+<p><a class="github-button" href="https://github.com/adriangigante/rating-web/fork" data-icon="octicon-repo-forked" data-size="large" aria-label="Fork adriangigante/rating-web on GitHub">Fork</a></p>
 
 <h3 id="use-the-openshift-cli-to-deploy-the-rating-web">Use the OpenShift CLI to deploy the <code class="language-plaintext highlighter-rouge">rating-web</code></h3>
 
